--- a/cb/Views/Login/Index.cshtml
+++ b/cb/Views/Login/Index.cshtml
@@ -13,7 +13,7 @@
 
             <div class="form-group">
                 <label for="usr">Password:</label>
-                <input type="text" class="form-control" name="password">
+                <input type="password" class="form-control" name="password">
             </div>
 
             <button type="submit" class="btn btn-primary">Login</button>
