--- a/cb/Views/Manage/Overview.cshtml
+++ b/cb/Views/Manage/Overview.cshtml
@@ -95,7 +95,7 @@
                         <td>@post.User.Username</td>
                         <td>@post.Titel</td>
                         <td>
-                            <form action="" method="GET">
+                            <form action="/Post/PostPage/@post.Id">
                                 <button type="submit" class="btn btn-primary">
                                     <span class="glyphicon glyphicon-eye-open"></span>
                                 </button>
