--- a/cb/Views/Post/PostPage.cshtml
+++ b/cb/Views/Post/PostPage.cshtml
@@ -14,7 +14,11 @@
                 <div class="panel panel-default">
                     <img src="data:image/jpeg;base64,@ViewBag.post.Image" width="100%"/>
                 </div>
-                <p>@ViewBag.post.Score beans <button type="button" class="btn btn-primary btn-xs" onclick="window.location.href='/Post/LikePost/@ViewBag.Post.Id'">+</button> - @ViewBag.post.Comments.Count comments -  By <a href="/User/UserProfile/@ViewBag.post.User.Id">@ViewBag.Post.User.Username</a></p>
+                <p>@ViewBag.post.Score beans @if (Session["LoggedInUser"] != null)
+                                             {
+                                                 <button type="button" class="btn btn-primary btn-xs" onclick="window.location.href = '/Post/LikePost/@ViewBag.Post.Id'">+</button>
+                                             }
+                - @ViewBag.post.Comments.Count comments -  By <a href="/User/UserProfile/@ViewBag.post.User.Id">@ViewBag.Post.User.Username</a></p>
       
         </div>
         <div class="col-sm-4"></div>
@@ -36,13 +40,17 @@
         <div class="col-sm-3"></div>
         <div class="col-sm-4">
             <div class="row">
-                <div class="col-sm-9">
-                    <textarea rows="4" cols="100"></textarea>
-                </div>
+                <form action="/Post/AddCommentToPost" method="POST"> 
+                    <div class="col-sm-9">
+                        <input type="hidden" name="postid" value="@ViewBag.Post.Id"/>
+                        <textarea name="message" rows="4" cols="100"></textarea>
+                    </div>
                 <div class="col-sm-3">
-                    <button type="button" class="btn btn-primary" style="margin-top: 17px">Post</button>
+                    <button type="submit" class="btn btn-primary" style="margin-top: 17px">Post</button>
                 </div>
+                </form>
             </div>
+   
         </div>
     </div>
     }
@@ -59,23 +67,37 @@
     </div>
 
     <!-- Comments inladen -->
-    <div class="row" style="margin-top: 10px; margin-bottom: 10px;">
-        <div class="col-sm-3"></div>
-        <div class="col-sm-4">
-            <div class="row">
-                <div class="col-sm-3">
-                    <img src="https://www.w3schools.com/bootstrap/cinqueterre.jpg" class="img-circle" alt="Cinque Terre" height="90%" width="100%"/>
+    @foreach (Comment comment in ViewBag.Post.Comments)
+    {
+        <div class="row" style="margin-top: 10px; margin-bottom: 10px;">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-4">
+                <div class="row">
+                    <div class="col-sm-3">
+                        <img src="data:image/jpeg;base64,@comment.User.Image" class="img-circle" height="90%" width="100%"/>
+                    </div>
+                    <div class="col-sm-9">
+                        <div class="container-fluid" style="border: 1px solid #cecece; word-wrap: break-word;">
+                            <p>@comment.Message</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-9">
-                    <div class="container-fluid" style="border: 1px solid #cecece; word-wrap: break-word;">
-                        <p>Dit is een commenasdfasdfsdfsafasdfasdfasdfsadfsadfsadfsadfsadfsadfsdft</p>
+                <div class="row">
+                    <div class="col-sm-3">@comment.User.Username</div>
+                    <div class="col-sm-9"></div>
+                    <div class="cos-sm-3">
+                        @if (Session["LoggedInUser"] != null)
+                        {
+                            if (comment.User.Id == Convert.ToInt32(Session["LoggedInUser"]) || ViewBag.user.IsManager == true)
+                             {
+                                 <button onclick="window.location.href = '/Post/DeleteComment/@comment.Id'" class="btn btn-danger btn-xs">Delete</button>
+                             }
+                        }
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-3">Username</div>
-            </div>
         </div>
-    </div>
+    }
+   
 
 </div>
