--- a/cb/Views/SignUp/Index.cshtml
+++ b/cb/Views/SignUp/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="row">
     <div class="col-sm-12">
         <h2>Sing up</h2>
-        <form action="/SignUp/CreateUser/" method="POST">
+        <form action="/SignUp/CreateUser/" enctype = "multipart/form-data" method="POST">
             <div class="form-group">
                 <label>Username:</label>
                 <input type="text" class="form-control" name="username">
@@ -10,6 +10,11 @@
             <div class="form-group">
                 <label >Password:</label>
                 <input type="password" class="form-control" name="password">
+            </div>
+            
+            <div class="form-group">
+                <label>Image:</label>
+                <input type="file" name="image">
             </div>
             
             <div class="form-group">
